[project]
name = "langgraph-test"
version = "0.1.0"
description = "Standalone LangGraph survey flow for testing"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.1.0",
    "langgraph>=0.0.20",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.0",
    "openai>=1.0.0",
    "anthropic>=0.15.0",
    "tavily-python>=0.3.0",
    "googlemaps>=4.10.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "langsmith>=0.0.80",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "ipython>=8.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"